<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">
    <item android:title="@string/men_group0">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@android:drawable/sym_action_email"
                    android:title="@string/men_home" />
                <item
                    android:id="@+id/nav_frag1"
                    android:icon="@android:drawable/ic_menu_edit"
                    android:title="@string/men_frag1" />
                <item
                    android:id="@+id/nav_frag2"
                    android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/men_frag2" />
                <item
                    android:id="@+id/nav_frag3"
                    android:icon="@android:drawable/ic_menu_delete"
                    android:title="@string/men_frag3" />
            </group>
        </menu>

    </item>

</menu>